--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="card-face card-front">
                 <div class="grad-icon">🎓</div>
                 <h2>Thân mời dự<br>Lễ kỷ yếu</h2>
-                <p class="sub-text">Trân trọng mời bạn<br>tham gia buổi lễ</p>
+                <p class="sub-text">Trân trọng mời bạn<br>tham gia cùng Thanh Tùng</p>
                 <div class="line"></div>
                 <h1 id="displayName">Dear Thanh Tùng</h1>
             </div>
@@ -204,3 +204,4 @@
     </script>
 </body>
 </html>
+
